# mk61

./: .gitignore  CMakeLists.txt  README.md  mk61.sln
.github/workflows/: cmake-build-and-tests.yml  cmake-multi-platform.yml
CalcBlazorApi/: CalcBlazorApi.csproj  CalcBlazorApi.http  Program.cs
CalcBlazorApi/Controllers/: KeyInfoController.cs
CalcBlazorApi/Properties/: launchSettings.json
CalcBlazorApp/: CalcBlazorApp.csproj  Program.cs  _Imports.razor
CalcBlazorApp/Layout/: MainLayout.razor.css
CalcBlazorApp/Pages/: DebugOutput.razor  DebugOutput.razor.css  Display.razor  Display.razor.css  Home.razor  Keyboard.razor  Keyboard.razor.css  Switches.razor  Switches.razor.css  SystemCase.razor  SystemCase.razor.css
CalcBlazorApp/Properties/: launchSettings.json
CalcBlazorApp/Services/: KeyService.cs
CalcBlazorApp/wwwroot/: appsettings.json  index.html
CalcBlazorCore/Models/: KeyInfo.cs
cpu/: CMakeLists.txt  README.md  cpu.vcxproj
cpu/test/: static_properties_tests.cc
keyboard/: CMakeLists.txt  KeyPositions.h  keyboard.vcxproj  keyboard.vcxproj.filters
keyboard/src/: Instructions.h  KeyPositions.h  Keyboard.cpp  Keyboard.h
keyboard/test/: keyboard_test.cpp
mk61_lexer/: CMakeLists.txt  README.md  mk61_lexer.vcxproj  mk61_lexer.vcxproj.filters
mk61_lexer/src/: Preprocessor.cpp  Preprocessor.h
mk61_lexer/test/: preprocessor_test.cc
mk61_lexer_test/: CMakeLists.txt  mk61_lexer_test.vcxproj  test.cpp
